[package]
name = "cholon"
version = "0.1.0"
edition = "2021"
authors = ["GhostLee <lianbang@tsingland.io>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
cron = "0.11.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
crossbeam = "0.8"
rayon = "1.5"
tokio = { version = "1.19.2", features = ["full"] }
async-trait = "0.1.56"
futures = "0.3"
log = "0.4"
